update assign align

--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -499,136 +499,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "arr=np.zeros((3,10), dtype=(float,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr[0,0] = (2.4, 4.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.4"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-66-e1bbd9fbb3c0>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-66-e1bbd9fbb3c0>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    for i in range(ncomps)\"\"\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Assign sample cells to reference gmm components and compute deltas\n",
+    "# Use a reference sample's gmm to assign cells from test samples\n",
+    "# to its various components, and compute varition metrics between\n",
+    "# a reference component attributes and test sample cells matching it\n",
     "'''\n",
     "Parameters\n",
     "----------\n",
+    "ref: Name of reference sample\n",
+    "figsize: Size of the output figure\n",
+    "pointsize: Size of the points in the figure\n",
     "'''\n",
-    "importlib.reload(PA)\n",
-    "\n",
-    "def plot_deltas_aa(pop, ref, arr):\n",
-    "    ncomps = pop['samples'][ref]['gmm'].n_components\n",
-    "    nr, nc = arr.shape\n",
-    "    labels = pop['order'] # - ref\n",
-    "    for i in range(ncomps):\n",
-    "        x = np.arange(nc-1)\n",
-    "        y = arr[i,:]\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "def assign_align(pop, ref=None)\n",
-    "    if ref == None:\n",
-    "        raise Exception('Please provide sample id of reference')\n",
-    "    elif ref not in pop['samples']:\n",
-    "        raise Exception('Provided reference not in sample list.\\nYou can print the list of available samples with show_samples()')\n",
-    "    pop['ref'] = ref # assign reference\n",
-    "    gmm = pop['samples'][ref]['gmm'] # retrieve reference gmm\n",
-    "    arr = np.zeros((gmm.n_components,pop['nsamples']), dtype=(float,2)) # array to store tuples (delta mu, delta w)\n",
-    "    W = pop['W'] # retrieve W matrix to project feature means later\n",
-    "\n",
-    "    for j,x in enumerate(pop['order']): # for each sample\n",
-    "        if x != ref: # if sample x is different from reference sample\n",
-    "            C = pop['samples'][x]['C'] # retrieve feature data for sample x\n",
-    "            ass = gmm.predict(C) # get cells assignments \n",
-    "            pop['samples'][x]['assignments'] = ass # save cell assignments\n",
-    "            ntestcells = C.shape[0] # get total number of cells for sample x\n",
-    "            for i in range(gmm.n_components): # for each reference component i\n",
-    "                try:\n",
-    "                    idx = np.where(ass==i)[0]\n",
-    "                    sub = C[idx,:]\n",
-    "                    mean = sub.mean(axis=0)\n",
-    "                    mu_test = np.array(mean.dot(W.T)).flatten() # compute test component mu\n",
-    "                    mu_ref = pop['samples'][ref]['means_genes'][i] # get ref component mu\n",
-    "                    w_test = len(idx)/ntestcells\n",
-    "                    w_ref = gmm.weights_[i]\n",
-    "                    deltamu = np.linalg.norm([np.array(mu_test).flatten() - np.array(mu_ref).flatten()], ord='fro')\n",
-    "                    deltaw = (w_test - w_ref)*100\n",
-    "                    arr[i,j] = (deltamu, deltaw)\n",
-    "                except:\n",
-    "                    arr[i,j] = (None,None)\n",
-    "    i = np.where(pop['order']==ref)[0][0]\n",
-    "    arr = arr[i,:]\n",
-    "                    \n",
-    "assign_align(pop, ref='CONTROL', arr)\n"
+    "PA.assign_align(pop, ref='CONTROL', figsize=(15,15), pointsize=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -653,16 +539,6 @@
     "         method='test2ref', # one of: test2ref, ref2test, conservative\n",
     "         figsizedeltas=(10,10),\n",
     "         figsizeentropy=(10,10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(PA)\n",
-    "PA.score_subpopulations(pop, ref='CONTROL')"
    ]
   },
   {
@@ -693,123 +569,6 @@
     "                      renderhists=True,\n",
     "                      usefiltered=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr =pop['samples']['Loteprednol etabonate']['alignments']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for x in pop['order']:\n",
-    "    if x != 'CONTROL':\n",
-    "        arr = pop['samples'][x]['alignments']\n",
-    "        print(x)\n",
-    "        print(arr)\n",
-    "        print('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i=2\n",
-    "x='Mianserin HCl'\n",
-    "arr = pop['samples'][x]['alignments']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "irow = np.where(arr[:,1] == 2)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "irow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for subirow in irow:\n",
-    "    itest = int(arr[irow, 0]) # get test comp number from row\n",
-    "    mu_test = pop['samples'][x]['means_genes'][itest] # get the test comp mean value\n",
-    "    w_test = pop['samples'][x]['gmm'].weights_[itest] # get the test comp weight value\n",
-    "    samplelbls.append(x) # store test sample label x\n",
-    "    tmp_delta_mus.append(np.linalg.norm([np.array(mu_test).flatten() - np.array(mu_ref).flatten()], ord='fro')) # store delta mu\n",
-    "    tmp_delta_ws.append((w_test - w_ref)*100) # store delta w\n",
-    "    xcoords.append(k)\n",
-    "    added = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "itest = int(arr[irow, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "itest = int(arr[irow, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "itest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1007,49 +766,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop['umap']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.sparse as ss\n",
-    "\n",
-    "x = 'CONTROL'\n",
-    "i = 1\n",
-    "C = pop['samples'][x]['C'] # get the feature data\n",
-    "gmm = pop['samples'][x]['gmm'] # get the gmm\n",
-    "prediction = gmm.predict(C) # get the cell subpopulation assignments\n",
-    "idx = np.where(prediction==i)[0] # get the indices of the cells in a specific subpop\n",
-    "M_norm = pop['samples'][x]['M_norm'] # get filtered data\n",
-    "M1 = M_norm[:,idx] # subset gene data matrix with subpopulation indices\n",
-    "\n",
-    "x = 'Loteprednol etabonate'\n",
-    "i = 2\n",
-    "C = pop['samples'][x]['C'] # get the feature data\n",
-    "gmm = pop['samples'][x]['gmm'] # get the gmm\n",
-    "prediction = gmm.predict(C) # get the cell subpopulation assignments\n",
-    "idx = np.where(prediction==i)[0] # get the indices of the cells in a specific subpop\n",
-    "M_norm = pop['samples'][x]['M_norm'] # get filtered data\n",
-    "M2 = M_norm[:,idx] # subset gene data matrix with subpopulation indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from multiprocessing import Pool\n",
     "import numpy as np\n",
     "import os\n",
@@ -1087,173 +803,6 @@
     "# Differential expression between two sparse matrices\n",
     "downregulated, upregulated = diffexp_two_matrices(M1, M2, genes, cutoff=.9) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downregulated"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upregulated"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "x = pop['umap'][:,0]\n",
-    "y = pop['umap'][:,1]\n",
-    "\n",
-    "plt.scatter(x,y,s=.01,c='lightgrey')\n",
-    "\n",
-    "idx_infected = [10,100,5000]\n",
-    "x_infected = x[idx_infected]\n",
-    "y_infected = y[idx_infected]\n",
-    "plt.scatter(x_infected,y_infected,s=1,c='red')\n",
-    "\n",
-    "plt.title('my title')\n",
-    "plt.xticks([])\n",
-    "plt.yticks([])\n",
-    "plt.xlabel('umap1 (or tsne1)')\n",
-    "plt.ylabel('umap2 (or tsne2)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = 0\n",
-    "end = 0\n",
-    "for x in pop['order']:\n",
-    "    n = pop['samples'][x]['M'].shape[1]\n",
-    "    end = start+n\n",
-    "    pop['samples'][x]['indices'] = (start,end)\n",
-    "    start = end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = 'CONTROL'\n",
-    "compnumber = 0\n",
-    "marker = 'CD3D'\n",
-    "\n",
-    "gmm = pop['samples'][sample]['gmm']\n",
-    "C = pop['samples'][sample]['C']\n",
-    "prediction = gmm.predict(C)\n",
-    "idx = np.where(prediction==compnumber)[0]\n",
-    "\n",
-    "\n",
-    "M = pop['samples'][sample]['M']\n",
-    "if compnumber != None:\n",
-    "    gmm = pop['samples'][sample]['gmm']\n",
-    "    C = pop['samples'][sample]['C']\n",
-    "    prediction = gmm.predict(C)\n",
-    "    idx = np.where(prediction==compnumber)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
