update assign align

--- a/examples/popalign.ipynb
+++ b/examples/popalign.ipynb
@@ -391,63 +391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building model for CONTROL (1 of 43)\n",
-      "Building model for Mianserin HCl (2 of 43)\n",
-      "Building model for Pomalidomide (3 of 43)\n",
-      "Building model for Loteprednol etabonate (4 of 43)\n",
-      "Building model for Celecoxib (5 of 43)\n",
-      "Building model for Sulfasalazine (6 of 43)\n",
-      "Building model for Methotrexate (7 of 43)\n",
-      "Building model for Busulfan (8 of 43)\n",
-      "Building model for Rapamycin (9 of 43)\n",
-      "Building model for Tranilast (10 of 43)\n",
-      "Building model for Budesonide (11 of 43)\n",
-      "Building model for Everolimus (12 of 43)\n",
-      "Building model for Acetylcysteine (13 of 43)\n",
-      "Building model for Zafirlukast (14 of 43)\n",
-      "Building model for Bimatoprost (15 of 43)\n",
-      "Building model for Adapalene (16 of 43)\n",
-      "Building model for Triamcinolone Acetonide (17 of 43)\n",
-      "Building model for Thalidomide (18 of 43)\n",
-      "Building model for Isotretinoin (19 of 43)\n",
-      "Building model for Ketoprofen (20 of 43)\n",
-      "Building model for Doramapimod (21 of 43)\n",
-      "Building model for Cetirizine DiHCl (22 of 43)\n",
-      "Building model for Betamethasone Valerate (23 of 43)\n",
-      "Building model for Phenylbutazone (24 of 43)\n",
-      "Building model for Naproxen Sodium (25 of 43)\n",
-      "Building model for Flurbiprofen (26 of 43)\n",
-      "Building model for Meprednisone (27 of 43)\n",
-      "Building model for Latrepirdine 2HCl (28 of 43)\n",
-      "Building model for Mesalamine (29 of 43)\n",
-      "Building model for Nepafenac (30 of 43)\n",
-      "Building model for Zileuton (31 of 43)\n",
-      "Building model for Cyclosporine (32 of 43)\n",
-      "Building model for Tazarotene (33 of 43)\n",
-      "Building model for Allopurinol Sodium (34 of 43)\n",
-      "Building model for Etodolac (35 of 43)\n",
-      "Building model for Alprostadil (36 of 43)\n",
-      "Building model for Dexrazoxane HCI (37 of 43)\n",
-      "Building model for Ibuprofen (38 of 43)\n",
-      "Building model for Loratadine (39 of 43)\n",
-      "Building model for Ifosfamide (40 of 43)\n",
-      "Building model for Mercaptopurine (41 of 43)\n",
-      "Building model for Febuxostat (42 of 43)\n",
-      "Building model for Masitinib (43 of 43)\n",
-      "Rendering models\n",
-      "Sample Everolimus: Component 7 only contains one cell.\n",
-      "Sample Acetylcysteine: Component 7 only contains one cell.\n",
-      "Sample Adapalene: Component 6 only contains one cell.\n",
-      "Sample Etodolac: Component 5 only contains one cell.\n",
-      "Sample Ifosfamide: Component 0 only contains one cell.\n",
-      "Sample Febuxostat: Component 6 only contains one cell.\n"
+      "Building model for CONTROL (1 of 1)\n",
+      "Rendering models\n"
      ]
     }
    ],
@@ -477,7 +429,8 @@
     "              rendering='grouped', \n",
     "              types='defaultpbmc', # either None, 'defaultpbmc' or a dictionary\n",
     "              figsizegrouped=(20,20),\n",
-    "              figsizesingle=(6,5))"
+    "              figsizesingle=(6,5),\n",
+    "              only='CONTROL')"
    ]
   },
   {
