add comment to top of tutorial

--- a/tutorials/PopAlign_Tutorial_v1.ipynb
+++ b/tutorials/PopAlign_Tutorial_v1.ipynb
@@ -21,7 +21,18 @@
       },
       "source": [
         "\n",
-        "If you are not using this notebook in Google Colabs, please install the package on your own computer, download the data from figshare, and then skip ahead to the data loading step. \n",
+        "This tutorial is meant to be run in Google Colab. If you are not using this notebook in Google Colab, please install the package on your own computer, download the data from figshare, and then skip ahead to the data loading step. \n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jZAkb_RO5zE3",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "---\n",
         "### Install the Popalign repo\n",
@@ -35,9 +46,7 @@
         "\n",
         "After installing the PopAlign package with pip, the user can import it in their Python code:\n",
         "\n",
-        "`import popalign as PA`\n",
-        "\n",
-        "\n"
+        "`import popalign as PA`\n"
       ]
     },
     {
